# Machine-Learning-Specialization-Coursera

./: .sourcery.yaml  pyproject.toml
C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab03_Model_Representation_Soln.ipynb  C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb
C1 - Supervised Machine Learning - Regression and Classification/week2/C1W2A1/: C1_W2_Linear_Regression.ipynb
C1 - Supervised Machine Learning - Regression and Classification/week2/Optional Labs/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab02_Multiple_Variable_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W2_Lab04_FeatEng_PolyReg_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Lab06_Sklearn_Normal_Soln.ipynb
C1 - Supervised Machine Learning - Regression and Classification/week3/C1W3A1/: C1_W3_Logistic_Regression_solution.ipynb
C1 - Supervised Machine Learning - Regression and Classification/week3/Optional Labs/: C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab02_Sigmoid_function_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb  C1_W3_Lab04_LogisticLoss_Soln.ipynb  C1_W3_Lab05_Cost_Function_Soln.ipynb  C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C1_W3_Lab07_Scikit_Learn_Soln.ipynb  C1_W3_Lab08_Overfitting_Soln.ipynb  C1_W3_Lab09_Regularization_Soln.ipynb
C2 - Advanced Learning Algorithms/week1/C2W1A1/: C2_W1_Assignment.ipynb  C2_W1_Assignment_solution.ipynb
C2 - Advanced Learning Algorithms/week2/C2W2A1/: C2_W2_Assignment.ipynb  (+1 more)
(+19 files in other folders)
