[tool.poetry]
name = "machine-learning-specialization-coursera"
version = "0.1.0"
description = ""
authors = ["anhtuan23 <dotuananh.dta@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_specialization_coursera"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.22,<=1.24.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
pandas = "^2.0.3"
ipympl = "^0.9.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
tensorflow-metal = "^1.0.1"
tensorflow-macos = "^2.13.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
